src/Store.css
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

.store-header{
    border: 1px solid blue;
    max-width: 85%;
    margin: auto;
}


.featured-section{
    border: 1px solid blue;
    max-width: 80vw;
    min-height: 48vh;
    margin: auto;
    padding: max(10px,1vw);
}

.featured-title{
    display: flex;
    align-items: center;
}

h2.feat{
    margin: 1rem .5rem;
    display: inline;
}

.refreshbtn{
    margin-left: auto;
    margin-right: 10px; 
    border: 0px;
    padding: .3rem;
    max-height: 35px;
    border-radius: 90%;
    background-color: rgb(91, 187, 255);
}
.refreshbtn:hover{
    background-color: rgb(172, 255, 255);
}

.featurecon{
    display: flex;
    justify-content: space-around;
}


.cards{
    width: max(90px, 15vw);
    min-height: 30vh;
    border: 1px solid gray;
    border-radius: 15px;
    padding: 1rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    
}

.cardbtn{
    margin: .3rem;
    width: max(80px, 60%);
    padding: .3rem .1rem;
}

/* search */
.search-section{
    margin: auto;
    display: flex;
    min-height: 55vh;
    width: 80vw;

}

.searchbox{
    min-width: 35vw;
    border: 1px solid cyan;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.searchcon{
    padding: max(2px, 2vw);
    min-width: 220px;
    display: flex;
    justify-content: center;
}

input{
    width: max(130px, 20vw);
    height: 2rem;
    font-size: 1rem;
    padding: .2rem;
}

.searchbtn{
    height: 2rem;
    padding: .3rem;
    background-color: rgb(91, 187, 255);
    color: white;
    border: 0px;
    font-weight: 600;
}

.searchbtn:hover{
    background-color: rgb(209, 255, 255);
    color: rgb(66, 66, 66);
}

/* preview */

.previewcard{
    width: 45vw;
    padding: 15px 3rem;
    border: 1px solid yellowgreen;
}

h1#pokedex{
    margin: 20px 0px;
}

.basicinfo{
    display: flex;
    flex-wrap: wrap;
}

.basics{
    padding: 1rem;
}

.pokepreview{
    width: 200px;
    border: 1px solid gray;
}

@media screen and (max-width: 700px) {
    .store-header {
        max-width: 98vw;
    }
    .featured-section{
        max-width: 96vw;
    }
    .search-section{
        width: 96vw;
    }
    .searchbox{
        width: 45vw;
    }
    .previewcard{
        width: 51vw;
    }
}

